# UdacitySimulatorIO

./: .gitignore  LICENCE  README.md  pyproject.toml
src/UdacitySimulatorIO/: UdacitySimulationOutput.py  UdacitySimulatorConfig.py  __init__.py
tests/: test_basicTest.py
