[project]
name = "UdacitySimulatorIO"
version = "0.1.0"
description = ""
authors = [
    { name = "Paolo Ginefra", email = "ginefra.paolo@gmail.com" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.12,<4.0"
dependencies = ["pytest (>=8.4.1,<9.0.0)"]

[tool.poetry]
packages = [{ include = "UdacitySimulatorIO", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
